--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,21 @@
 {
     "require": {
+        "php": "7.2.1",
         "maknz/slack": "^1.7",
-        "react/http": "^0.8.1",
         "fabpot/goutte": "^3.2",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "react/socket": "^0.8.9",
+        "guzzlehttp/guzzle": "^6.3",
+        "react/promise": "^2.5",
+        "ratchet/pawl": "^0.3.1"
     },
     "require-dev": {
-        "symfony/var-dumper": "^4.0"
+        "symfony/var-dumper": "^4.0",
+        "phpunit/phpunit": "^7.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Cherry\\RealTimeClient\\": "src"
+        }
     }
 }
